Corrijo link de img en index

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                     <h4 class="productos">$23.999</h4>
                 </div>
                 <div class="productos">
-                    <a href="./pages/mujer.html"><img class="productos" src="../img/campera-nike-violeta.jpg" alt="Camperon Independiente"></a>
+                    <a href="./pages/mujer.html"><img class="productos" src="./img/campera-nike-violeta.jpg" alt="Camperon Independiente"></a>
                     <h3 class="productos">Campera Nike Swoosh Run</h3>
                     <h4 class="productos">$33.099</h4>
                 </div>
                 <div class="productos">
-                    <a href="./pages/mujer.html"><img class="productos" src="../img/zapatillas-nike-pipa-rosa.jpg" alt="Camperon Independiente"></a>
+                    <a href="./pages/mujer.html"><img class="productos" src="./img/zapatillas-nike-pipa-rosa.jpg" alt="Camperon Independiente"></a>
                     <h3 class="productos">Zapatillas Nike Court Vision Low Next Nature</h3>
                     <h4 class="productos">$33.999</h4>
                 </div>
