Modifico texto en index

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="cambio2">
                     <h3 class="cambio"><strong>ES EL MOMENTO DEL CAMBIO.</strong></h3>
-                    <h4 class="cambio">Lo sabemos bien. Ya lo has escuchado antes. Afirmaciones infundadas. Las promesas vacías. Informaciones poco transparentes.</h4>
+                    <h4 class="cambio">La cultura del "usar-tirar" es insostenible, debemos aprender a valorar y cuidar los recursos naturales que tenemos a disposición.</h4>
                 </div>
             </div>
 
