Creo pagina clubes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="./pages/hombre.html"><li class="nav">HOMBRE</li></a>
                     <a href="./pages/mujer.html"><li class="nav">MUJER</li></a>
                     <a href="./pages/ninos.html"><li class="nav">NIÑOS</li></a>
-                    <li class="nav">LANZAMIENTOS</li>
+                    <a href="./pages/clubes.html"><li class="nav" role="presentation">CLUBES</li></a>
                 </ul>
             </nav>
         </div>
@@ -78,7 +78,7 @@
           <section class="productos">
             <div class="productos-1">
                 <div class="productos">
-                    <a href="./pages/hombre.html"><img class="productos" src="./img/camperon-independiente.jpg" alt="Camperon Independiente"></a>
+                    <a href="./pages/clubes.html"><img class="productos" src="./img/camperon-independiente.jpg" alt="Camperon Independiente"></a>
                     <h3 class="productos">CAMPERON INDEPENDIENTE PUMA</h3>
                     <h4 class="productos">$23.999</h4>
                 </div>
@@ -182,7 +182,7 @@
                 <a href="./pages/hombre.html"><h4 class="secciones-foot">Hombre</h4></a>
                 <a href="./pages/mujer.html"><h4 class="secciones-foot">Mujer</h4></a>
                 <a href="./pages/ninos.html"><h4 class="secciones-foot">Niños</h4></a>
-                <h4 class="secciones-foot">Lanzamientos</h4>
+                <a href="./pages/clubes.html"><h4 class="secciones-foot">Clubes</h4></a>
             </div>
             <div class="precios-justos-footer">
                 <img class="precios-justos" src="./img/precios-justos.webp" alt="Precios Justos">
