--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -51,8 +51,12 @@
     </header>
 
     <main>
-        <div class="messi">
-            <h1><video class="messi" controls autoplay src="../img/video-adidas.mp4"></video></h1>
+        <div class="logo-clubes">
+            <img class="clubes" src="../img/logo-boca.png" alt="clubes">
+            <img class="clubes" src="../img/logo-river.png" alt="clubes">
+            <img class="clubes" src="../img/logo-independiente.png" alt="clubes">
+            <img class="clubes" src="../img/logo-racing.png" alt="clubes">
+            <img class="clubes" src="../img/logo-sanlorenzo.png" alt="clubes">
         </div>
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
@@ -65,88 +69,115 @@
                     <h4 class="productos">$23.999</h4>
                 </div>
                 <div class="productos">
-                    <img class="productos" src="../img/camiseta-argentina.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta Argentina Campeones Titular</h3>
+                    <img class="productos" src="../img/campera-independiente.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Campera De Independiente Puma Entrenamiento Roja</h3>
+                    <h4 class="productos">$11.319</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/camiseta-independiente.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De Independiente Puma Oficial Roja</h3>
+                    <h4 class="productos">$9.369</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/pantalon-independiente.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Pantalón De Independiente Puma Pro Entrenamiento Negro</h3>
+                    <h4 class="productos">$10.649</h4>
+                </div>
+            </div>
+
+            <div class="productos-1">
+                <div class="productos">
+                    <img class="productos" src="../img/conjunto-boca.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Conjunto De Boca Adidas Azul</h3>
+                    <h4 class="productos">$44.440</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/camiseta-boca.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De Boca Adidas Tercer Recambio Authentic Azul</h3>
+                    <h4 class="productos">$15.399</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/camperon-boca.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camperón De Abrigo Boca Adidas Azul</h3>
+                    <h4 class="productos">$59.999</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/pantalon-boca.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Pantalón Adidas Boca Juniors Entrenamiento Mujer Azul</h3>
+                    <h4 class="productos">$17.749</h4>
+                </div>
+            </div>
+
+            <div class="productos-1">
+                <div class="productos">
+                    <img class="productos" src="../img/camiseta-river.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De River Adidas Oficial Campeón Blanca</h3>
+                    <h4 class="productos">$24.999</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/pantalon-river.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Pantalon De River Adidas Entrenamiento 22 Niño Verde</h3>
                     <h4 class="productos">$24.440</h4>
                 </div>
                 <div class="productos">
-                    <img class="productos" src="../img/campera-adidas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Conjunto Adidas Essential Negro</h3>
-                    <h4 class="productos">$21.299</h4>
+                    <img class="productos" src="../img/ojotas-river.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Ojota De River Adidas Adilette Shower Blanca</h3>
+                    <h4 class="productos">$12.999</h4>
                 </div>
                 <div class="productos">
-                    <img class="productos" src="../img/botines-violeta.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Botines De Fútbol Adidas Predator Unisex Negro</h3>
-                    <h4 class="productos">$39.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-mangas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Adidas Tiro Pride</h3>
-                    <h4 class="productos">$27.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/short-puma-negro.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Short De Baño Puma Length Swim De Hombre</h3>
-                    <h4 class="productos">$5.499</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-facha.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera adidas Varilite</h3>
-                    <h4 class="productos">$60.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-camuflada-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera adidas Marathon</h3>
-                    <h4 class="productos">$39.999</h4>
+                    <img class="productos" src="../img/camiseta-alternativa-river.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De River Adidas Alternativa Authentic Negra</h3>
+                    <h4 class="productos">$34.999</h4>
                 </div>
             </div>
 
             <div class="productos-1">
                 <div class="productos">
-                    <img class="productos" src="../img/remera-nike-pipa-roja.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Nike Sportswear</h3>
-                    <h4 class="productos">$7.999</h4>
+                    <img class="productos" src="../img/camiseta-titular-sanlorenzo.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta Fútbol Nike Titular San Lorenzo 2023 Hombre</h3>
+                    <h4 class="productos">$24.999</h4>
                 </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-nike-blanca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Running Nike Dri-Fit Miler Hombre</h3>
-                    <h4 class="productos">$14.499</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-canterbury.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Canterbury Ccc Logo</h3>
-                    <h4 class="productos">$6.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-under-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Under Armour Challenger Top</h3>
-                    <h4 class="productos">$12.499</h4>
-                </div>
-            </div>
 
-            <div class="productos-1">
                 <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-urbana.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Urbanas adidas Breaknet</h3>
+                    <img class="productos" src="../img/camiseta-sanlorenzo.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De San Lorenzo Nike Alternativa Niño Blanca</h3>
                     <h4 class="productos">$25.999</h4>
                 </div>
+
                 <div class="productos">
-                    <img class="productos" src="../img/zapatillas-nike-blancas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Running Nike Air Zoom Vomero 16</h3>
-                    <h4 class="productos">$35.499</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-under-fluo.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Under Armour Hovr Sonic 5</h3>
-                    <h4 class="productos">$49.999</h4>
+                    <img class="productos" src="../img/pelota-sanlorenzo.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Pelota Dribbling San Lorenzo Mundial 2.0</h3>
+                    <h4 class="productos">$5.999</h4>
                 </div>
                 <div class="productos">
                     <img class="productos" src="../img/zapatillas-adidas-rojas.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Zapatillas adidas Response Super 3.0</h3>
                     <h4 class="productos">$41.999</h4>
+                </div>
+            </div>
+
+            <div class="productos-1">
+                <div class="productos">
+                    <img class="productos" src="../img/camiseta-racing.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De Racing Kappa Alternativa Azul</h3>
+                    <h4 class="productos">$9.699</h4>
+                </div>
+
+                <div class="productos">
+                    <img class="productos" src="../img/camiseta-blanca-racing.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta De Racing Kappa Tercer Recambio Slim Blanca</h3>
+                    <h4 class="productos">$9.699</h4>
+                </div>
+
+                <div class="productos">
+                    <img class="productos" src="../img/short-racing.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Short De Racing Kappa Unisex Blanco</h3>
+                    <h4 class="productos">$8.299</h4>
+                </div>
+                <div class="productos">
+                    <img class="productos" src="../img/pechera-racing.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Pechera De Racing Kappa Entrenamiento Amarilla</h3>
+                    <h4 class="productos">$7.099</h4>
                 </div>
             </div>
         </section>
