--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -44,7 +44,7 @@
                     <a href="./hombre.html"><li class="nav">HOMBRE</li></a>
                     <a href="./mujer.html"><li class="nav">MUJER</li></a>
                     <a href="./ninos.html"><li class="nav">NIÑOS</li></a>
-                    <li class="nav">LANZAMIENTOS</li>
+                    <a href="./clubes.html"><li class="nav">CLUBES</li></a>
                 </ul>
             </nav>
         </div>
@@ -167,7 +167,7 @@
                 <a href="./hombre.html"><h4 class="secciones-foot">Hombre</h4></a>
                 <a href="./mujer.html"><h4 class="secciones-foot">Mujer</h4></a>
                 <a href="./ninos.html"><h4 class="secciones-foot">Niños</h4></a>
-                <h4 class="secciones-foot">Lanzamientos</h4>
+                <a href="./clubes.html"><h4 class="secciones-foot">Clubes</h4></a>
             </div>
             <div class="precios-justos-footer">
                 <img class="precios-justos" src="../img/precios-justos.webp" alt="Precios Justos">
