Agrego producto en clubes

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -150,9 +150,9 @@
                     <h4 class="productos">$5.999</h4>
                 </div>
                 <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-rojas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas adidas Response Super 3.0</h3>
-                    <h4 class="productos">$41.999</h4>
+                    <img class="productos" src="../img/canilleras-sanlorenzo.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Canillera Dribbling San Lorenzo Dioses 22</h3>
+                    <h4 class="productos">$2.099</h4>
                 </div>
             </div>
 
