Agrego productos en sección clubes

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -145,14 +145,14 @@
                 </div>
 
                 <div class="productos">
-                    <img class="productos" src="../img/pelota-sanlorenzo.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pelota Dribbling San Lorenzo Mundial 2.0</h3>
-                    <h4 class="productos">$5.999</h4>
+                    <img class="productos" src="../img/remera-negra-sanlorenzo.avif" alt="Camperon Independiente">
+                    <h3 class="productos">Camiseta Nike 3° Edicion</h3>
+                    <h4 class="productos">$24.999</h4>
                 </div>
                 <div class="productos">
-                    <img class="productos" src="../img/canilleras-sanlorenzo.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Canillera Dribbling San Lorenzo Dioses 22</h3>
-                    <h4 class="productos">$2.099</h4>
+                    <img class="productos" src="../img/campera-sanlorenzo.avif" alt="Camperon Independiente">
+                    <h3 class="productos">Campera Nike Park20 San Lorenzo</h3>
+                    <h4 class="productos">$19.999</h4>
                 </div>
             </div>
 
