--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/logo-finishline-fondo-white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/main.css">
     <title>Hombre | FinishLine</title>
 </head>
@@ -60,9 +60,9 @@
         <section class="productos">
             <div class="productos-1">
                 <div class="productos">
-                    <img class="productos" src="../img/camperon-independiente.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camperón Independiente Puma</h3>
-                    <h4 class="productos">$23.999</h4>
+                    <img class="productos" src="../img/camperon-argentina-adidas.jpg" alt="Camperon Independiente">
+                    <h3 class="productos">Camperon adidas Argentina Condivo 2022</h3>
+                    <h4 class="productos">$83.599</h4>
                 </div>
                 <div class="productos">
                     <img class="productos" src="../img/camiseta-argentina.jpg" alt="Camperon Independiente">
