Reproduce automaticamente video en hombre

--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -52,7 +52,7 @@
 
     <main>
         <div class="messi">
-            <h1><video class="messi" controls autoplay src="../img/video-adidas.mp4"></video></h1>
+            <h1><video class="messi" src="../img/video-adidas.mp4" controls autoplay muted playsinline></video></h1>
         </div>
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
