Agrego compra segura en index

--- a/index.html
+++ b/index.html
@@ -177,8 +177,72 @@
                 <div class="slide">
                     <img class="logos-index" src="./img/logo-converse.png" alt="img">
                 </div>
+
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-adidas.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-nike.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-puma.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-new-balance.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-rebook.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-fila.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-converse.png" alt="img">
+                </div>
+
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-adidas.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-nike.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-puma.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-new-balance.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-rebook.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-fila.png" alt="img">
+                </div>
+                <div class="slide">
+                    <img class="logos-index" src="./img/logo-converse.png" alt="img">
+                </div>
             </div>
         </div>
+
+        <hr>
+
+        <section class="compra">
+            <div class="compra1">
+                <img class="compra1" src="./img/tarjeta-de-credito.png" alt="Tarjeta de credito">
+                <h4 class="compra1">Compra con tarjeta</h4>
+                <h5 class="compra1">Aceptamos todas las tarjetas de crédito y débito. También ofrecemos nuestra tarjeta FinishLine con increíbles beneficios y descuentos!</h5>
+            </div>
+            <div class="compra2">
+                <img class="compra2" src="./img/camion-seguro.png" alt="Camion compra segura">
+                <h4 class="compra2">Envío rápido y seguro</h4>
+                <h5 class="compra2">Nuestro servicio de entrega es tan rápido como nunca habías imaginado. Recibe tus productos a domicilio dentro de las 48hs de realizada la compra!</h5>
+            </div>
+            <div class="compra3">
+                <img class="compra3" src="./img/compra-segura.png" alt="Compra segura">
+                <h4 class="compra3">Compra Protegida</h4>
+                <h5 class="compra3">Si hay algún inconveniente con la transacción de su pedido, se le reembolsará el 100% del total de su compra.</h5>
+            </div>
+        </section>
 
     </main>
     
@@ -210,12 +274,6 @@
             <h5 class="footer-finishline-argentina">© 2023 FinishLine Argentina</h5>
         </div>
     </footer>
-
-
-
-
-
-
 
 
 
