Modifico js y productos en las todas secciones

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -73,6 +73,9 @@
                     <h3 class="productos">Campera De Independiente Puma Entrenamiento Roja</h3>
                     <h4 class="productos">$19.319</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/camiseta-independiente.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Camiseta De Independiente Puma Oficial Roja</h3>
@@ -96,6 +99,9 @@
                     <h3 class="productos">Camiseta De Boca Adidas Tercer Recambio Authentic Azul</h3>
                     <h4 class="productos">$15.399</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/camperon-boca.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Camperón De Abrigo Boca Adidas Azul</h3>
@@ -119,6 +125,9 @@
                     <h3 class="productos">Pantalon De River Adidas Entrenamiento 22 Niño Verde</h3>
                     <h4 class="productos">$24.440</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/ojotas-river.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Ojota De River Adidas Adilette Shower Blanca</h3>
@@ -143,7 +152,9 @@
                     <h3 class="productos">Camiseta De San Lorenzo Nike Alternativa Niño Blanca</h3>
                     <h4 class="productos">$25.999</h4>
                 </div>
+            </div>
 
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/remera-negra-sanlorenzo.avif" alt="Camperon Independiente">
                     <h3 class="productos">Camiseta Nike 3° Edicion</h3>
@@ -168,7 +179,9 @@
                     <h3 class="productos">Camiseta De Racing Kappa Tercer Recambio Slim Blanca</h3>
                     <h4 class="productos">$9.699</h4>
                 </div>
+            </div>
 
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/short-racing.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Short De Racing Kappa Unisex Blanco</h3>
