--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -57,27 +57,36 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
 
+        <h3 class="adidas">Adidas</h3>
+
         <section class="productos">
             <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/camperon-argentina-adidas.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Camperon adidas Argentina Condivo 2022</h3>
                     <h4 class="productos">$83.599</h4>
+                    <button id="cero" class="btnProd" type="button">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <img class="productos" src="../img/camiseta-argentina.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Camiseta Argentina Campeones Titular</h3>
                     <h4 class="productos">$24.440</h4>
+                    <button id="one" class="btnProd" type="button">Agregar al carrito</button>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/campera-adidas.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Conjunto Adidas Essential Negro</h3>
                     <h4 class="productos">$21.299</h4>
+                    <button id="two" class="btnProd" type="button">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <img class="productos" src="../img/botines-violeta.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Botines De Fútbol Adidas Predator Unisex Negro</h3>
                     <h4 class="productos">$39.999</h4>
+                    <button id="three" class="btnProd" type="button">Agregar al carrito</button>
                 </div>
             </div>
 
@@ -92,6 +101,9 @@
                     <h3 class="productos">Short De Baño Puma Length Swim De Hombre</h3>
                     <h4 class="productos">$5.499</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/campera-adidas-facha.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Campera adidas Varilite</h3>
@@ -103,6 +115,7 @@
                     <h4 class="productos">$39.999</h4>
                 </div>
             </div>
+            
 
             <div class="productos-1">
                 <div class="productos">
@@ -115,6 +128,9 @@
                     <h3 class="productos">Remera Running Nike Dri-Fit Miler Hombre</h3>
                     <h4 class="productos">$14.499</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/remera-canterbury.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Remera Canterbury Ccc Logo</h3>
@@ -138,6 +154,9 @@
                     <h3 class="productos">Zapatillas Running Nike Air Zoom Vomero 16</h3>
                     <h4 class="productos">$35.499</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/zapatillas-under-fluo.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Zapatillas Under Armour Hovr Sonic 5</h3>
@@ -193,6 +212,13 @@
 
 
 
+
+
+
+
+
+
+    <script src="../main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
