--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -71,6 +71,9 @@
                     <h3 class="productos">Conjunto adidas Sportswear Teamsport De Mujer</h3>
                     <h4 class="productos">$25.499</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/zapatillas-adidas-blancas.webp" alt="Camperon Independiente">
                     <h3 class="productos">Zapatillas adidas Runfalcon de Mujer</h3>
@@ -94,6 +97,9 @@
                     <h3 class="productos">Campera Nike Sportswear Essential</h3>
                     <h4 class="productos">$47.999</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/campera-topper-marron.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Campera Topper Br Puffer II</h3>
@@ -117,6 +123,9 @@
                     <h3 class="productos">Pantalón Nike Sportswear Essential</h3>
                     <h4 class="productos">$21.199</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/remera-adidas-azul.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Remera adidas Floral Superher</h3>
@@ -140,6 +149,9 @@
                     <h3 class="productos">Pollera adidas Club Tennis</h3>
                     <h4 class="productos">$17.999</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/zapatillas-nike-pipa-rosa.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Zapatillas Nike Court Vision Low Next Nature</h3>
