--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -69,6 +69,9 @@
                     <h3 class="productos">Zapatillas Atomik Beta Pro</h3>
                     <h4 class="productos">$8.299</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/campera-azul-dibujos.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Campera Nike Sportswear Icon Clash Windrunner Nena</h3>
@@ -92,6 +95,9 @@
                     <h3 class="productos">Remera Gilbert Térmica Infantil</h3>
                     <h4 class="productos">$8.999</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/remera-fila-ninos.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Remera Fila Animal</h3>
@@ -115,6 +121,9 @@
                     <h3 class="productos">Pantalón Nike Sportswear Club Fleece</h3>
                     <h4 class="productos">$12.499</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/pantalon-adidas-ninos.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Pantalón adidas X Disney Pixar Monsters</h3>
@@ -138,6 +147,9 @@
                     <h3 class="productos">Zapatillas Puma Rebound Layup</h3>
                     <h4 class="productos">$26.199</h4>
                 </div>
+            </div>
+
+            <div class="productos-1">
                 <div class="productos">
                     <img class="productos" src="../img/zapatillas-puma-azul-ninos.jpg" alt="Camperon Independiente">
                     <h3 class="productos">Zapatillas Puma Wired Run</h3>
