Modifico js y clubes

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -142,7 +142,7 @@
 
             <div class="productos-1">
                 <div class="productos">
-                    <img class="productos" src="../img/camiseta-titular-sanlorenzo.jpg" alt="Camperon Independiente">
+                    <img class="productos" src="../img/camiseta-titular-sanlorenzo.webp" alt="Camperon Independiente">
                     <h3 class="productos">Camiseta Fútbol Nike Titular San Lorenzo 2023 Hombre</h3>
                     <h4 class="productos">$24.999</h4>
                 </div>
