--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -169,6 +169,10 @@
                 </div>
             </div>
         </section>
+
+        <section id="productos">
+            
+        </section>
     </main>
 
     <footer class="footer">
@@ -198,6 +202,12 @@
             <h5 class="footer-finishline-argentina">© 2023 FinishLine Argentina</h5>
         </div>
     </footer>
+
+
+
+
+
+
 
 
 
